# archon

./: .gitignore  Architecture.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: copilot-instructions.md
programs/copy-trading/: Anchor.toml  README.md  package.json  tsconfig.json  txtx.yml
programs/copy-trading/programs/copy-trading/: Cargo.toml
programs/copy-trading/programs/copy-trading/src/: constants.rs  error.rs  lib.rs
programs/copy-trading/programs/copy-trading/src/instructions/: close_vault.rs  create_claim.rs  create_vault.rs  deposit.rs  mod.rs  swap.rs  withdraw.rs
programs/copy-trading/programs/copy-trading/src/state/: investor_claim.rs  mod.rs  trading_position.rs  vault.rs
programs/copy-trading/runbooks/: README.md
programs/copy-trading/runbooks/deployment/: main.tx
programs/copy-trading/tests/: Cargo.toml  close-vault.spec.ts  copy-trading.spec.ts  copy-trading.ts  create-claim.spec.ts  create-vault.spec.ts  deposit.spec.ts  helpers.ts  old-create-vault.ts  swap.ts  types.ts  withdraw.spec.ts
programs/copy-trading/tests/old/: create-vault.ts  deposit.ts  helpers.ts  types.ts
programs/copy-trading/tests/src/: test_initialize.rs
services/api/: package.json
services/web/: package.json
